image proxy support, board browsing, threads

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ APP_NAME=PrivacyChan
 API_BASE_URL="https://a.4cdn.org/"
 API_BOARDS_ENDPOINT="boards.json"
 API_CATALOG_ENDPOINT="catalog.json"
+
+CDN_BASE_URL="https://i.4cdn.org/"
