fix: css returning encoding error, and proxy s.4cdn.org

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ API_BOARDS_ENDPOINT="boards.json"
 API_CATALOG_ENDPOINT="catalog.json"
 
 CDN_BASE_URL="https://i.4cdn.org/"
+STATIC_CDN_BASE_URL="https://s.4cdn.org/"
