--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,15 +5,38 @@ on:
     types: [closed]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
-    if: github.event.pull_request.merged
-    
     steps:
-      - name: Create Release Tag
-        uses: K-Phoen/semver-release-action@master
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Get next version
+        id: semver
+        uses: ietf-tools/semver-action@v1
         with:
-          release_branch: main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ github.token }}
+          branch: main
+          majorList: major,revert
+          minorList: feat
+          patchList: fix,chore,refactor,meta,style
+
+      - name: Generate changelog
+        id: changelog
+        uses: requarks/changelog-action@v1
+        with:
+          token: ${{ github.token }}
+          fromTag: ${{ github.ref_name }}
+          toTag: ${{ env.previousTag }}
+          writeToFile: false
+
+      - name: Create release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          allowUpdates: true
+          draft: false
+          makeLatest: true
+          name: ${{ github.ref_name }}
+          body: ${{ steps.changelog.outputs.changes }}
+          token: ${{ secrets.GITHUB_TOKEN }}
