wip: board/global search

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PORT=3000
 APP_NAME=PrivacyChan
 
 API_BASE_URL="https://a.4cdn.org/"
+P4_API_BASE_URL="https://p.4chan.org/api/"
 API_BOARDS_ENDPOINT="boards.json"
 API_CATALOG_ENDPOINT="catalog.json"
 
